# LearningPGZ

./: README.md  pygame_zero_cheat_sheet.html  pyproject.toml
1_Draw_to_screen/: 1_sample.py
2_Actors_and_Movement/: 2_sample.py
3_Collision_Detection/: 3_sample.py
4_Mouse_Clicks/: 4_sample.py
5_Lists and Sounds/: 5_sample.py
6_Creating_From_Scratch/: 6_basic_structure.py
